--- a/SocialWeave/appsettings.json
+++ b/SocialWeave/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=GTX; Database=socialWeaveDB;trusted_connection=true;TrustServerCertificate=true;"
+  },
   "AllowedHosts": "*"
 }
