--- a/SocialWeave/SocialWeave.csproj
+++ b/SocialWeave/SocialWeave.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Service\**" />
+    <Content Remove="Models\Service\**" />
+    <EmbeddedResource Remove="Models\Service\**" />
+    <None Remove="Models\Service\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
