--- a/SocialWeave/SocialWeave.csproj
+++ b/SocialWeave/SocialWeave.csproj
@@ -31,4 +31,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
