Implemented logic to show post duration

--- a/SocialWeave/SocialWeave.csproj
+++ b/SocialWeave/SocialWeave.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Extensions\DateTimeExtension.cs~RF15a3768.TMP" />
     <None Remove="Models\ConcreteClasses\xwrtydjj.ucc~" />
   </ItemGroup>
 
