--- a/SocialWeave/SocialWeave.csproj
+++ b/SocialWeave/SocialWeave.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <None Remove="Extensions\DateTimeExtension.cs~RF15a3768.TMP" />
     <None Remove="Models\ConcreteClasses\xwrtydjj.ucc~" />
+    <None Remove="Views\Post\CreatePostImage.cshtml~RF238960b.TMP" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +35,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Search\" />
   </ItemGroup>
 
 </Project>
