Implemented methods related to post recommendations

--- a/SocialWeave/SocialWeave.csproj
+++ b/SocialWeave/SocialWeave.csproj
@@ -15,7 +15,9 @@
 
   <ItemGroup>
     <None Remove="Extensions\DateTimeExtension.cs~RF15a3768.TMP" />
+    <None Remove="Models\AbstractClasses\Post.cs~RFedd6b.TMP" />
     <None Remove="Models\ConcreteClasses\xwrtydjj.ucc~" />
+    <None Remove="Program.cs~RF3a1bab.TMP" />
     <None Remove="Views\Post\CreatePostImage.cshtml~RF238960b.TMP" />
   </ItemGroup>
 
