--- a/SocialWeave/SocialWeave.csproj
+++ b/SocialWeave/SocialWeave.csproj
@@ -17,6 +17,7 @@
     <None Remove="Extensions\DateTimeExtension.cs~RF15a3768.TMP" />
     <None Remove="Models\AbstractClasses\Post.cs~RFedd6b.TMP" />
     <None Remove="Models\ConcreteClasses\xwrtydjj.ucc~" />
+    <None Remove="Models\Services\GenerateTrendingPostsService.cs~RF15b8b02.TMP" />
     <None Remove="Program.cs~RF3a1bab.TMP" />
     <None Remove="Views\Post\CreatePostImage.cshtml~RF238960b.TMP" />
   </ItemGroup>
