Improved logic for showing posts in the index, and added a helper related to quantifying posts to be displayed in the index view

--- a/SocialWeave/SocialWeave.csproj
+++ b/SocialWeave/SocialWeave.csproj
@@ -19,6 +19,7 @@
     <None Remove="Models\ConcreteClasses\xwrtydjj.ucc~" />
     <None Remove="Models\Services\GenerateTrendingPostsService.cs~RF15b8b02.TMP" />
     <None Remove="Program.cs~RF3a1bab.TMP" />
+    <None Remove="Views\Home\Index.cshtml~RF1f4cddf.TMP" />
     <None Remove="Views\Post\CreatePostImage.cshtml~RF238960b.TMP" />
   </ItemGroup>
 
